--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /*******************************/
 body {
     color: #797979;
-    background: #ffffff;
+    background: linear-gradient(to bottom , #d4d4d4,#ffffff);
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -248,7 +248,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 120px 0 0 0;
     overflow: hidden;
-    background: linear-gradient(rgba(16, 133, 78, 0.95), rgba(17, 4, 95, 0.95)), url(../img/hero-bg.jpg);
+     background-color : #d4d4d4 ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -279,14 +279,14 @@ a:focus {
 }
 
 .hero .hero-text p {
-    color: #ffffff;
+    color: #444444;
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 15px;
 }
 
 .hero .hero-text h1 {
-    color: #ffffff;
+    color:#444444;
     font-size: 60px;
     font-weight: 700;
     letter-spacing: 3px;
@@ -297,7 +297,7 @@ a:focus {
     display: inline-block;
     margin: 0;
     height: 35px;
-    color: #ffffff;
+    color:#444444;
     font-size: 35px;
     font-weight: 600;
 }
@@ -309,7 +309,7 @@ a:focus {
 .hero .hero-text .typed-cursor {
     font-size: 35px;
     font-weight: 300;
-    color: #ffffff;
+    color:#444444;
 }
 
 .hero .hero-btn .btn {
@@ -320,7 +320,7 @@ a:focus {
 }
 
 .hero .hero-btn .btn:hover {
-    color: #ffffff;
+    color: #444444;
     background: transparent;
     box-shadow: inset 0 0 0 0 #ffffff;
     border-color: #ffffff;
