--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #000000;
+    color: #ffffff;
     background: #000000;
     font-family: 'Montserrat', sans-serif;
 }
